# rocket-yew-rust

./: .gitignore  README.md
backend/: Cargo.toml
backend/data/css/: main.css
backend/data/markup/: homepage.md
backend/src/: build.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
ui/: Cargo.toml  index.html
ui/src/: main.rs
ui/src/components/: markup.rs  mod.rs
ui/src/pages/: home.rs  mod.rs  not_found.rs  resume.rs
ui/src/utils/: fetchstates.rs  mod.rs
